--- a/1-small/2-button-press.html
+++ b/1-small/2-button-press.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Button Pressed</title>
 </head>
+
 <body>
   <!-- HTML goes here -->
+  <button id="myButton">Click me!</button>
 
   <script>
     // JavaScript goes here
+    const button = document.querySelector("#myButton");
+
+    function logMousePos() {
+      console.log("X position: " + event.clientX);
+      console.log("Y position: " + event.clientY);
+    }
+    
+    button.addEventListener("click", logMousePos)
 
   </script>
 </body>
+
 </html>
