--- a/1-small/3-scroll-event.html
+++ b/1-small/3-scroll-event.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scroll Events</title>
 </head>
+
 <body>
   <!-- HTML goes here -->
 
   <script>
     // JavaScript goes here
+    window.addEventListener('resize', () => {
+      console.log('You Change the size of the Window!')
+    })
+
+    // function debounce(func, wait, immediate) {
+    //   var timeout;
+    //   return function () {
+    //     var context = this, args = arguments;
+    //     var later = function () {
+    //       timeout = null;
+    //       if (!immediate) func.apply(context, args);
+    //     };
+    //     var callNow = immediate && !timeout;
+    //     clearTimeout(timeout);
+    //     timeout = setTimeout(later, wait);
+    //     if (callNow) func.apply(context, args);
+    //   };
+    // };
+
+    // var myEfficientFn = debounce(function () {
+    //   // All the taxing stuff you do
+    // }, 250);
+
+    // window.addEventListener('resize', myEfficientFn);
 
   </script>
 </body>
+
 </html>
