--- a/2-medium/2-madlibs.html
+++ b/2-medium/2-madlibs.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
   <title>MadLib</title>
 </head>
+
+
 <body>
   <!-- HTML goes here -->
   <h1>MadLib</h1>
@@ -15,16 +19,41 @@
       <br>
       <input type="text" name="animal" id="animal">
     </p>
-    <button type="submit">Do the MadLib!</button>
+    <p class="form-group">
+      <label for="country">Country</label>
+      <br>
+      <input type="text" name="country" id="country">
+    </p>
+    <p class="form-group">
+      <label for="pluralNoun">Plural Noun</label>
+      <br>
+      <input type="text" name="pluralNoun" id="pluralNoun">
+    </p>
+    <p class="form-group">
+      <label for="food">Food</label>
+      <br>
+      <input type="text" name="food" id="food">
+    </p>
+    <p class="form-group">
+      <label for="device">device</label>
+      <br>
+      <input type="text" name="device" id="device">
+    </p>
+    <p class="form-group">
+      <label for="adjective">Adjective</label>
+      <br>
+      <input type="text" name="adjective" id="adjective">
+    </p>
+    <button type="submit" id="submitButton">Do the MadLib!</button>
   </form>
-  
+
   <div id="madLibStory" style="display: none">
     <h2>Nature Show</h2>
     <p>
-      The majestic <span class="animal"></span> has roamed the forests of 
+      The majestic <span class="animal"></span> has roamed the forests of
       <span class="country"></span> for thousands of years. Today, she wanders
       in search of <span class="pluralNoun"></span>. She must find food to
-      survive. While hunting for <span class="food"></span>, she found a 
+      survive. While hunting for <span class="food"></span>, she found a
       <span class="device"></span> hidden behind a <span class="noun"></span>.
       Suddenly, the device turned on and started to become <span class="adjective"></span>.
       The king of <span class="country"></span> suddenly appeared, jumped on top
@@ -40,7 +69,49 @@
 
   <script>
     // JavaScript goes here
+    const submitButton = document.querySelector("#submitButton");
+    const story = document.querySelector("#madLibStory");
+    const form = document.querySelector("#madLibForm");
+
+    function updatePlaceholder(id) {
+      const input = document.getElementById(id)
+      const placeholders = document.getElementsByClassName(id)
+      for (let index = 0; index < placeholders.length; index++) {
+        const placeholder = placeholders[index];
+        placeholder.innerText = input.value;
+      }
+    }
+    //add event listener to button
+    submitButton.addEventListener("click", function(event) {
+      event.preventDefault();
+      console.log("submit!");
+      //show story 
+      story.style.display = "block";
+      //hide form
+      form.style.display = "none";
+      //replace placeholders
+
+      updatePlaceholder("animal");
+      updatePlaceholder("country");
+      updatePlaceholder("pluralNoun");
+      updatePlaceholder("food");
+      updatePlaceholder("device");
+      updatePlaceholder("adjective");
+
+    })
+    //find restart button
+    const restartButton = document.querySelector("#restart");
+    //add event listener
+    restartButton.addEventListener("click", function () {
+      //hide story
+      story.style.display = "none";
+      // show form
+      form.style.display = "block";
+      document.getElementById("madLibForm").reset();
+    })
+
 
   </script>
 </body>
+
 </html>
